// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle { type: 'SetVisibilityFilter', payload: 'SHOW_ACTIVE' } 1`] = `
Object {
  "visibilityFilter": "SHOW_ACTIVE",
}
`;

exports[`should handle { type: 'SetVisibilityFilter', payload: 'SHOW_ALL' } 1`] = `
Object {
  "visibilityFilter": "SHOW_ALL",
}
`;

exports[`should handle { type: 'SetVisibilityFilter', payload: 'SHOW_COMPLETED' } 1`] = `
Object {
  "visibilityFilter": "SHOW_COMPLETED",
}
`;

exports[`should return initial state 1`] = `
Object {
  "visibilityFilter": "SHOW_ALL",
}
`;
